compiler/tools/fpp-check/test/expr/sizeof_string_fw_store_type_not_defined.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/expr/sizeof_string_fw_store_type_not_defined.fpp:1.21
constant c = sizeof(string size 20)
                    ^
error: symbol FwSizeStoreType is not defined
note: looking for a type here
note: the symbol FwSizeStoreType has an implied use at the point of the error
note: use of a string type requires this definition
